syntax = "proto3";
import "google/protobuf/empty.proto";
import "enum.proto";
import "message.proto";
package service;

option java_multiple_files = false;
option java_package = "protoc";
option java_outer_classname = "ServiceProto";
option objc_class_prefix = "HLW";

message SpectateRequest {
	
}

message SpectatorGameState {
	GrpcFlag state_flag = 1;
	GrpcFrameData frame_data = 2;
	GrpcScreenData screen_data = 3;
	GrpcAudioData audio_data = 4;
	GrpcRoundResult round_result = 5;
}

message InitializeRequest {
	bool player_number = 1;
	string player_name = 2;
	bool is_blind = 3;
}

message InitializeResponse {
	string player_uuid = 1;
}

message ParticipateRequest {
	string player_uuid = 1;
}

message PlayerGameState {
	GrpcFlag state_flag = 1;
	bool is_control = 2;
	GrpcFrameData frame_data = 3;
	GrpcScreenData screen_data = 4;
	GrpcAudioData audio_data = 5;
	GrpcGameData game_data = 6;
	GrpcRoundResult round_result = 7;
}

message PlayerInput {
	string player_uuid = 1;
	GrpcKey input_key = 2;
}

service Service {
	rpc Spectate(SpectateRequest) returns (stream SpectatorGameState) {}

	rpc Initialize (InitializeRequest) returns (InitializeResponse) {}
	rpc Participate (ParticipateRequest) returns (stream PlayerGameState) {}
	rpc Input (PlayerInput) returns (google.protobuf.Empty) {}
}
